# napari-griottes

./: .gitignore  .pre-commit-config.yaml  Dafne.ipynb  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini  vectors.py
.github/workflows/: test_and_deploy.yml
src/napari_griottes/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/napari_griottes/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_griottes1/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  napari.yaml
src/napari_griottes1/_tests/: test_dock_widget.py  test_reader.py  test_sample_data.py  test_widget.py
