[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "Griottes @ git+https://github.com/BaroudLab/Griottes.git"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/napari_griottes/_version.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
