[metadata]
name = napari-griottes1

author = AA
author_email = aaristov@pasteur.fr
url = https://github.com/aaristov/napari-griottes1
license = BSD-3-Clause
description = Create graphs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/aaristov/napari-griottes1/issues
    Documentation = https://github.com/aaristov/napari-griottes1#README.md
    Source Code = https://github.com/aaristov/napari-griottes1
    User Support = https://github.com/aaristov/napari-griottes1/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-griottes1 = napari_griottes1:napari.yaml
