[metadata]
name = napari_griottes
description = Create graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaristov/napari-griottes
author = AA
author_email = aaristov@pasteur.fr
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/aaristov/napari-griottes/issues
    Documentation = https://github.com/aaristov/napari-griottes#README.md
    Source Code = https://github.com/aaristov/napari-griottes
    User Support = https://github.com/aaristov/napari-griottes/issues

[options]
packages = find:
install_requires =
    griottes@git+https://github.com/BaroudLab/Griottes.git
    networkx
    numpy
    pandas
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-griottes1 = napari_griottes:napari.yaml

[options.package_data]
* = *.yaml
